[DevTools] Make touch emulation work with OOPIF.

We now send touch emulation commands to all targets with
TouchEmulation capability.

BUG=648126

Review-Url: https://codereview.chromium.org/2731383002
Cr-Original-Commit-Position: refs/heads/master@{#455353}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: 15e28404267139f257d4767194f780cb448c675d